After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762210 - flvmux: plug leak(s) in error-scenario
flvmux: plug leak(s) in error-scenario
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal major
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-02-17 18:47 UTC by Håvard Graff (hgr)
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.87 KB, patch)
2016-02-17 18:47 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2016-02-17 18:47:23 UTC
Created attachment 321531 [details] [review]
patch

.
Comment 1 Tim-Philipp Müller 2016-02-19 15:08:56 UTC
commit 7787f439fca95f5fdf121477493ada8da91fb8a2
Author: Havard Graff <havard.graff@gmail.com>
Date:   Fri Dec 4 00:46:34 2015 +1100

    flvmux: plug leak(s) in error-scenario
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762210

and because I pushed too quickly again:

commit df341f41dc0518bf7f0f8d1aa57f976bddc3ff9c
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Fri Feb 19 15:02:04 2016 +0000

    flvmux, rtpvp9depay: fix indentation