flvmux: plug leak(s) in error-scenario

https://bugzilla.gnome.org/show_bug.cgi?id=762210